fix: change contrast of blockquote element

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,7 @@
   }
 
   blockquote {
-    @apply pl-5 border-l-2 border-l-gray-300 dark:border-l-gray-700 text-gray-500;
+    @apply pl-5 border-l-2 border-l-gray-300 dark:border-l-gray-700 text-gray-600 dark:text-gray-400;
   }
 
   hr {
